--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.4.1",
-    "rebuild": "^0.1.2"
+    "rebuild": "^0.1.2",
+    "sweetalert2": "^9.10.12",
+    "sweetalert2-react-content": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
